task30: Change board member role and add/remove user to/from board in handler
